config-root/namespaces/jx-staging/zeebe-cloud-events-router/zeebe-cloud-events-router-zeebe-cloud-events-router-deploy.yaml
# Source: zeebe-cloud-events-router/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zeebe-cloud-events-router-zeebe-cloud-events-router
  labels:
    draft: draft-app
    chart: "zeebe-cloud-events-router-0.0.51"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  namespace: jx-staging
  annotations:
    wave.pusher.com/update-on-config-change: 'true'
spec:
  selector:
    matchLabels:
      app: zeebe-cloud-events-router-zeebe-cloud-events-router
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: zeebe-cloud-events-router-zeebe-cloud-events-router
    spec:
      containers:
        - name: zeebe-cloud-events-router
          image: "gcr.io/camunda-researchanddevelopment/zeebe-cloud-events-router:0.0.51"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 1500m
              memory: 1768Mi
            requests:
              cpu: 750m
              memory: 1024Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
