config-root/namespaces/jx-staging/zeebe-cloud-events-router/zeebe-cloud-events-router-svc.yaml
# Source: zeebe-cloud-events-router/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zeebe-cloud-events-router
  labels:
    chart: "zeebe-cloud-events-router-0.0.51"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    fabric8.io/expose: "true"
    fabric8.io/ingress.annotations: 'kubernetes.io/ingress.class: nginx'
  namespace: jx-staging
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: zeebe-cloud-events-router-zeebe-cloud-events-router
