config-root/namespaces/jx-staging/zeebe-cloud-events-router/zeebe-cloud-events-router-ingress.yaml
# Source: zeebe-cloud-events-router/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: zeebe-cloud-events-router
  namespace: jx-staging
  labels:
    gitops.jenkins-x.io/pipeline: 'namespaces'
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: zeebe-cloud-events-router
              servicePort: 80
      host: zeebe-cloud-events-router-jx-staging.35.222.17.41.nip.io
